# copyright-labeller

./: Cargo.toml  README.md  latam copyright ai untagged.json  out.json
data/: Test.json  baltics-gen4.json  bangla-gen4.json  faroe-gen4.json  finland-gen4.json  iceland-gen3.json  iceland-gen4.json  locs.json  sweden-gen4.json  usa.json
python/: chatgpt-labeler.py  download.ipynb  downloader.py  labeler.ipynb  labeler.py
python/.ipynb_checkpoints/: download-checkpoint.ipynb  labeler-checkpoint.ipynb
src/: geo.rs  main.rs  utils.rs
