[package]
name = "geo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
pretty_env_logger = "0.5.0"
serde_json = "1.0.140"
reqwest = "0.12.15"
futures = "0.3.31"
anyhow = "1.0.98"
ocrs = "0.10.3"
rten = "0.18.0"
log = "0.4.27"
image = "0.25.6"
imageproc = "0.25.0"
indicatif = "0.17.11"
